# ai-daily-planner

./: README.md
ai-daily-planner/: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP.md  TODO.md  main.py  requirements.txt  start_backend.bat  start_backend.sh  start_gui.bat  start_gui.sh
ai-daily-planner/backend/: pyproject.toml
ai-daily-planner/backend/app/: main.py  recommendations.py  routes.py  schemas.py
ai-daily-planner/gui/: __init__.py  main_ui.py
ai-daily-planner/planner/: __init__.py  ai_suggester.py  scheduler.py  utils.py
ai-daily-planner/scripts/: generate_seed_and_data.sh  seed_tasks.json  synthetic_interactions.py
ai-daily-planner2/: README.md  metadata.json
ai-daily-planner2/app/: build.gradle.kts
ai-daily-planner2/app/src/main/java/com/example/: MainActivity.kt
ai-daily-planner2/app/src/main/java/com/example/data/api/: BackendClient.kt  GeminiClient.kt
ai-daily-planner2/app/src/main/java/com/example/data/database/: AppDatabase.kt  Daos.kt  Entities.kt
ai-daily-planner2/app/src/main/java/com/example/data/repository/: PlannerRepository.kt
ai-daily-planner2/app/src/main/java/com/example/ui/components/: CustomCharts.kt
ai-daily-planner2/app/src/main/java/com/example/ui/theme/: Color.kt  (+1 more)
ai-daily-planner2/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
ai-daily-planner2/app/src/main/res/values/: strings.xml
ai-daily-planner2/backend/: README.md  auth.py  database.py  gemini_service.py  main.py  models.py  requirements.txt
ai-daily-planner2/gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
